--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -8,6 +8,6 @@
 
 	<p><%= portfolio_items.body%></p>
 	
-	<%= image_tag portfolio_items.thumb_image%>
+	<%= image_tag portfolio_items.thumb_image unless portfolio_items.thumb_image.nil? %>
 
 <% end %>
