--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -12,4 +12,5 @@
 	
 	<%= image_tag portfolio_items.thumb_image unless portfolio_items.thumb_image.nil? %>
 	<%= link_to "Edit", edit_portfolio_path(portfolio_items)%>
+	<%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_items), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
