--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -1,7 +1,7 @@
 <h1>Angular Portfolio Items </h1>
 
 
-<%= link_to "Create New Item", new_portfolio_url %>
+<%= link_to "Create New Item", new_portfolio_url if logged_in?(:site_admin)%>
 
 
 <% @angular_portfolio_items.each do |portfolio_items| %>
@@ -11,6 +11,6 @@
 	<p><%= portfolio_items.body%></p>
 	
 	<%= image_tag portfolio_items.thumb_image unless portfolio_items.thumb_image.nil? %>
-	<%= link_to "Edit", edit_portfolio_path(portfolio_items)%>
-	<%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_items), method: :delete, data: { confirm: 'Are you sure?' } %>
+	<%= link_to "Edit", edit_portfolio_path(portfolio_items) if logged_in?(:site_admin)%>
+	<%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_items), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
 <% end %>
