--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,18 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "5555555555" %></p>
-<p><%= number_to_currency "55555" %></p>
-<p><%= number_with_delimiter "5555555555" %></p>
+<h1>Contact Information</h1>
+
+<hr>
+
+<!-- <div class="row>">
+	<div class="col-md-6"> -->
+	<h3> School Address </h3>
+		<p>2912 Executive Pkwy STE #220 Lehi, UT 84043</p>
+	<h3> Email </h3>
+		<p> ben.critchfield8@gmail.com</p>
+	<h3> Phone </h3>
+		<p><%= number_to_phone "8017352102" %></p>
+	<!-- </div> -->	
+
+	<!-- <div class="col-md-6"> -->
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.1424064445455!2d-111.89820288522753!3d40.427845479363796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752802ed15066bf%3A0x297af19778ecbd86!2s2912+Executive+Pkwy+%23220%2C+Lehi%2C+UT+84043!5e0!3m2!1sen!2sus!4v1498078421754" width="375" height="370" frameborder="0" style="border:0" allowfullscreen></iframe>
+	<!-- </div> -->
+</div>
