--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -159,4 +159,21 @@ body {
   .cover-container {
     width: 55rem;
   }
+
+  /*
+ * Custom Styles
+ */
 }
+
+.card-block {
+  color: black;
+  text-align: left;
+
+}
+
+.auth-links a {
+  color: black;
+}
+
+
+
