--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -53,8 +53,8 @@
       </div>
     </div>
 
-    <div class="auth-links">
-      <%= link_to "Back", :back %>
+    <div class="auth-link">
+     <%= link_to "Back", :back %>
     </div>
   </div>
 </div>
