--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="inner cover">
   <h1 class="cover-heading">Welcome</h1>
-  <p class="lead">Portfolio of my personal projects and skills I have acquired while attending Bottega. </p>
+  <p class="lead">Portfolio of my personal projects and skills I have acquired while attending Bottega and my things that I like.</p>
   <p class="lead">
   	<%= link_to "About Me", about_path, class: "btn_lg btn-secondary" %>
   </p>
