--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About Me</h1>
-<p>Student at Bottega learning the art of being a coding ninja. </p>
+<p>Student at Bottega where I am learning the art of being a coding ninja. </p>
