Implemented gritter for notications

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
 
           <%= video_tag "atom.mp4", autoplay: :autoplay, loop: :loop, mute: :mute, class: "background_video" %>
 
+          <%= render 'shared/alerts' %>
+
           <%= source_helper("application") %>
         </div>
     </div>
