--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(blog) do |f| %>
   <% if blog.errors.any? %>
     <% blog.errors.full_messages.each do |error| %>
-        <%= js add_gritter(error, :title => "Ben Critchfields Portfolio!", sticky: false) %>
+      <%= js add_gritter(error, title: "Ben Critchfields Portfolio", sticky: false) %>
     <% end %>
   <% end %>
 
