fixed port nav bar

--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -10,6 +10,11 @@ body {
   margin-bottom: 0;
 }
 
+#navbarNav li a{
+  text-decoration: none;
+  color: black;
+}
+
 .jumbotron {
   padding-top: 6rem;
   padding-bottom: 6rem;
