Updated source trackingfeature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,8 @@
 
           <%= render 'shared/alerts' %>
 
-          <%= source_helper("application") %>
         </div>
+      </div>
     </div>
   </body>
 </html>
