--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -9,7 +9,7 @@
 
     <meta name="keywords" content="<%= @seo_keywords %>" />
 
-    <%= stylesheet_link_tag    'portfolios', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -18,13 +18,13 @@
       <div class="site-wrapper-inner">
         <div class="cover-container">
 
-          <%= render "shared/portfolio_nav" %>
+          <%= render "shared/application_nav" %>
 
           <%= yield %>
 
-          <%= alerts %>
+          <%= render "shared/application_footer" %>
 
-          <%= source_helper("application") %>
+          <%= alerts %>
 
         </div>
       </div>
