Integrated favicons on all layouts

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -9,6 +9,9 @@
 
     <meta name="keywords" content="<%= @seo_keyworkds %>" />
 
+    <%= favicon_link_tag 'favicons/jug.ico' %>
+
+
     <%= stylesheet_link_tag    'blogs', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
