--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -202,3 +202,22 @@ body {
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translate(-50%, -50%);
 }
+.fix {
+  background-color: purple;
+  text-decoration: none;
+  border: 1px purple;
+}
+
+.fix:hover {
+  background: red;
+}
+
+.app-card-container {
+  color: black;
+  text-align: left;
+}
+
+.app-card-container >.card {
+  padding: 30px;
+}
+
