--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,13 +1,17 @@
-<h1>About Me</h1>
+<div class="app-card-container">
+	<div class="card">
+		<h1>About Me</h1>
 
-<hr>
+		<hr>
 
-<div class="row">
-	<div class="col-md-4">
-		<%= image_tag "IMG_0174.jpg", width: 300, alt: "profile Image" %>
-	</div>
+		<div class="row">
+			<div class="col-md-4">
+				<%= image_tag "IMG_0174.jpg", width: 300, alt: "profile Image" %>
+			</div>
 
-	<div class="col-md-8">
-		<p>Student at Bottega where I am learning the art of being a coding ninja. </p>
+			<div class="col-md-8">
+				<p>Student at Bottega where I am learning the art of being a coding ninja. </p>
+			</div>
+		</div>
 	</div>
 </div>
